--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "nanonets-ocr",
-	"version": "1.0.0",
+	"version": "1.1.0",
 	"description": "A test package for nanonets.com OCR APIs",
 	"main": "index.js",
 	"scripts": {
@@ -17,6 +17,7 @@
 	"author": "Harsh Kapadia",
 	"license": "MIT",
 	"dependencies": {
-		"axios": "^0.21.1"
+		"axios": "^0.21.1",
+		"buffer": "^6.0.3"
 	}
 }
